WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
51064
Reproducible crash inside WebCore::MediaPlayerPrivateQTKit::createQTMovie when loading <video>
https://bugs.webkit.org/show_bug.cgi?id=51064
Summary
Reproducible crash inside WebCore::MediaPlayerPrivateQTKit::createQTMovie whe...
Mark Rowe (bdash)
Reported
2010-12-14 15:34:08 PST
I’m seeing a reproducible crash below WebCore::MediaPlayerPrivateQTKit::createQTMovie: 1 com.apple.CoreFoundation 0x7fff8376fb9a CFURLCopyScheme + 0x2a 2 com.apple.CFNetwork 0x7fff89a45685 CFNetworkCopyProxiesForURL + 0xb2d
> 3 com.apple.WebCore 0x101e5a864 WebCore::MediaPlayerPrivateQTKit::createQTMovie(WTF::String const&) + 0x206
4 com.apple.WebCore 0x101e5a9e1 WebCore::MediaPlayerPrivateQTKit::loadInternal(WTF::String const&) + 0x75 5 com.apple.WebCore 0x101e56e41 WebCore::MediaPlayer::load(WTF::String const&, WebCore::ContentType const&) + 0x3cf 6 com.apple.WebCore 0x1017b8f78 WebCore::HTMLMediaElement::loadResource(WebCore::KURL const&, WebCore::ContentType&) + 0x19c 7 com.apple.WebCore 0x1017b8cc3 WebCore::HTMLMediaElement::selectMediaResource() + 0x207 8 com.apple.WebCore 0x1017170ee WebCore::ThreadTimers::sharedTimerFiredInternal() + 0x82 9 com.apple.WebCore 0x101807797 WebCore::timerFired(__CFRunLoopTimer*, void*) + 0x37 <
rdar://problem/8768727
>
Attachments
Patch
(5.70 KB, patch)
2010-12-14 15:39 PST
,
Mark Rowe (bdash)
sam
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Mark Rowe (bdash)
Comment 1
2010-12-14 15:39:47 PST
Created
attachment 76584
[details]
Patch
Mark Rowe (bdash)
Comment 2
2010-12-14 15:54:58 PST
Landed in
r74065
.
WebKit Review Bot
Comment 3
2010-12-14 16:14:08 PST
http://trac.webkit.org/changeset/74065
might have broken Qt Windows 32-bit Release
Early Warning System Bot
Comment 4
2010-12-14 16:27:06 PST
Attachment 76584
[details]
did not build on qt: Build output:
http://queues.webkit.org/results/7159001
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug