<http://webkit.org/b/51064> Reproducible crash inside WebCore::MediaPlayerPrivateQTKit::createQTMovie when loading <video>

Reviewed by Sam Weinig.

JavaScriptCore:

* wtf/text/WTFString.h: Prevent String from being implicitly convertable to bool.
It was previously implicitly convertible to bool on Mac via operator NSString*,
but since that always has a non-zero return value it would give unexpected results.

WebCore:

We were crashing inside MediaPlayerPrivateQTKit::createQTMovie as we were passing a null URL in
to CFNetworkCopyProxiesForURL. This happened because we were null-checking the URL incorrectly.

* platform/graphics/mac/MediaPlayerPrivateQTKit.mm:
(WebCore::MediaPlayerPrivateQTKit::resumeLoad): Explicitly test for a null string.

WebKit/mac:

* History/WebHistoryItem.mm:
(-[WebHistoryItem description]): Test whether the string is empty rather than incorrectly
always including the target in the output.

Canonical link: https://commits.webkit.org/64412@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@74065 268f45cc-cd09-0410-ab3c-d52691b4dbfc